@@ -11,6 +11,9 @@
    Move GeanyFiletypePrivate to filetypesprivate.h.
  * src/Makefile.am, src/ui_utils.c, configure.ac, wscript:
    Link with X11 if found to fix linking with a recent GNU ld.
+ * src/document.c:
+   Avoid delay and redrawing when automatically opening a new document
+   after closing one.
 
 
 2010-09-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
